# svarog

./: Cargo.toml  README.md
shaders/time_varying/: frag.shader  vert.shader
shaders/vert_col/: frag.shader  vert.shader
shaders/vert_col_tex/: vert.shader
src/: lib.rs  main.rs
src/engine/: mod.rs
src/examples/: basic.rs  mod.rs  time_varying.rs
src/gfx/: core.rs  ext.rs  mod.rs  util.rs
