[package]
name = "svarog"
version = "0.1.0"
authors = ["Eleanor McMurtry <elmcmurtry1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19"
vulkano-shaders = "0.19"
vulkano-win = "0.19"
cgmath = "0.17"
image = "0.23"
winit = "0.22"
time = "0.2"
rand = "0.7"
eyre = "0.3"
stable-eyre = "0.1"
png = "0.16.6"